src/objects/GP_Socio__c.object
<CustomObject>
    <description>Socio Club Personal - Gestor de Puntos</description>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GP_Socios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id_GP__c</fullName>
        <formula>idCuentaDiesyochoCaracteres__c  +
IF(Socio_padre__c  &lt;&gt; null, Socio_padre__r.idCuentaDiesyochoCaracteres__c ,&apos;0&apos;)</formula>
        <label>Id GP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_total__c</fullName>
        <label>Saldo total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Socio_padre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acumulador Padre</label>
        <referenceTo>GP_Socio__c</referenceTo>
        <relationshipName>GP_Socios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idCuentaDiesyochoCaracteres__c</fullName>
        <formula>CASESAFEID(Cuenta__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>idCuentaDiesyochoCaracteres</label>
        <type>Text</type>
    </fields>
    <label>GP Acumulador</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cuenta__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nombre de Socio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Acumuladores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>